# Plug_Firmware_LUX2

./: CMakeLists.txt  app_proj.cmake
carrot/: .LOGO  .bash_aliases  .env_aliases  .env_local  .env_proj  .idf_env  .idf_env_local  .idf_env_mac  .idf_env_wsl2  .idf_mac_port  .idf_wsl2_local.auto  .idf_wsl2_local.default  .idfx_wsl2_port  .mosa-init  .zsh_aliases
carrot/mosa/: sdkconfig
carrot/mosa/components/mos/: imu.c  imu_correct.c  imu_dist.c  imu_dist_loop.c  init.c
carrot/mosa/components/mos/include/: _kf.h  imu_dist_loop.h  mos.h  mos_pri.h
carrot/mosa/main/: IMU.c  global.c  main.c  mosa.cmake
carrot/mosa/main/include/: mosa_extern.h
carrot/mosa/main/prebuilt/include/: tracker_api.h  utimer.h
components/mos/: CMakeLists.txt  _kf.c  _matrix.c  gps.c  imu.c  imu_correct.c  imu_dist.c  imu_dist_loop.c  init.c  util.c
components/mos/include/: _kf.h  _matrix.h  imu_dist.h  imu_dist_loop.h  mos_pub.h
main/: CMakeLists.txt  GPS.c  IMU.c  cmd.c  main.c  time.c
main/include/: mosa.h  mosa_config.h  mosa_proto.h
main/prebuilt/include/: polltimer.h
